--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name: Ascent
-Theme URI: http://web.wsu.edu/spine
+Theme URI: https://web.wsu.edu/
 Author: WSU University Communications
 Author URI: http://web.wsu.edu, http://ucomm.wsu.edu
 Description: A child theme of the WSU Web Communications Spine template, used for Sandboxing.
 Template: spine
-Version: 0.5
+Version: 0.0.1
 License: Copyright Washington State University
 License URI: http://copyright.wsu.edu
 Tags: light
