--- a/scss/asc.css
+++ b/scss/asc.css
@@ -43,17 +43,21 @@ html body #spine #side-search-area input#s {
 html body #spine #side-search-area input#s:hover, html body #spine #side-search-area input#s:focus {
   border: 1px solid #0094ca;
 }
-/* line 61, asc.scss */
+/* line 62, asc.scss */
+html body #spine:not(.cropped) .spine-navigation {
+  padding-bottom: 0px;
+}
+/* line 66, asc.scss */
 html body #spine .spine-sitenav {
   margin-left: 0;
   margin-right: 0;
   padding-top: 8px;
 }
-/* line 65, asc.scss */
+/* line 70, asc.scss */
 html body #spine .spine-sitenav ul li {
   border-style: none;
 }
-/* line 68, asc.scss */
+/* line 73, asc.scss */
 html body #spine .spine-sitenav a {
   font-size: 1.2em;
   letter-spacing: 1px;
@@ -62,7 +66,7 @@ html body #spine .spine-sitenav a {
   color: white;
   border-left: #4e4c4b solid 8px;
 }
-/* line 75, asc.scss */
+/* line 80, asc.scss */
 html body #spine .spine-sitenav a:hover {
   border-left: #747270 solid 8px;
   color: white;
@@ -70,14 +74,14 @@ html body #spine .spine-sitenav a:hover {
   font-weight: 300;
   cursor: pointer;
 }
-/* line 83, asc.scss */
+/* line 88, asc.scss */
 html body #spine .spine-sitenav li.dogeared > a {
   color: white;
   background-color: #747270;
   border-left: #0094ca solid 8px;
   font-weight: 300;
 }
-/* line 91, asc.scss */
+/* line 96, asc.scss */
 html body #spine #side-latest-news h4 {
   color: white;
   text-transform: uppercase;
@@ -91,7 +95,7 @@ html body #spine #side-latest-news h4 {
   border-top: 1px solid #747270;
   padding-top: 30px;
 }
-/* line 104, asc.scss */
+/* line 109, asc.scss */
 html body #spine #side-latest-news .side-latest-news-box {
   display: block;
   height: 100%;
@@ -104,12 +108,12 @@ html body #spine #side-latest-news .side-latest-news-box {
   color: white;
   clear: both;
 }
-/* line 116, asc.scss */
+/* line 121, asc.scss */
 html body #spine #side-latest-news h5 {
   font-size: 1.2em;
   padding-bottom: 1em;
 }
-/* line 120, asc.scss */
+/* line 125, asc.scss */
 html body #spine #side-latest-news .rmore {
   display: block;
   width: 80px;
@@ -122,28 +126,28 @@ html body #spine #side-latest-news .rmore {
   text-align: center;
   background-color: #0094ca;
 }
-/* line 131, asc.scss */
+/* line 136, asc.scss */
 html body #spine #side-latest-news .rmore a {
   display: block;
   height: 100%;
   width: 100%;
   color: white;
 }
-/* line 137, asc.scss */
+/* line 142, asc.scss */
 html body #spine #side-latest-news .rmore:hover, html body #spine #side-latest-news .rmore:focus {
   padding: 4px;
   background-color: #4e4c4b;
   cursor: pointer;
   border: 1px solid #0094ca;
 }
-/* line 147, asc.scss */
+/* line 152, asc.scss */
 html body #spine .spine-footer {
   color: white;
   font-size: 1.3em;
   line-height: 1.1em;
   width: 178px;
 }
-/* line 153, asc.scss */
+/* line 158, asc.scss */
 html body #spine .spine-global-links {
   margin-top: 22px;
   padding-top: 22px;
@@ -151,16 +155,16 @@ html body #spine .spine-global-links {
   clear: both;
   border-color: #747270;
 }
-/* line 162, asc.scss */
+/* line 167, asc.scss */
 html body main a {
   color: #0094ca;
   text-decoration: underline;
 }
-/* line 165, asc.scss */
+/* line 170, asc.scss */
 html body main a:hover {
   color: #747270;
 }
-/* line 169, asc.scss */
+/* line 174, asc.scss */
 html body main h1 {
   color: #0094ca;
   font-weight: 700;
@@ -168,33 +172,33 @@ html body main h1 {
   line-height: 1.1em;
   padding-bottom: 1em;
 }
-/* line 173, asc.scss */
+/* line 178, asc.scss */
 html body main h2 {
   color: #0094ca;
   font-weight: 700;
   font-size: 2.2em;
   line-height: 1.1em;
 }
-/* line 176, asc.scss */
+/* line 181, asc.scss */
 html body main h3 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.8em;
   line-height: 1.1em;
 }
-/* line 179, asc.scss */
+/* line 184, asc.scss */
 html body main h4 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.2em;
   line-height: 1.1em;
 }
-/* line 182, asc.scss */
+/* line 187, asc.scss */
 html body main p, html body main ul, html body main ol {
   font-size: 1.4em;
   line-height: 1.6em;
 }
-/* line 187, asc.scss */
+/* line 192, asc.scss */
 html body main figure.featured-image {
   width: 50%;
   height: 100%;
@@ -207,50 +211,56 @@ html body main figure.featured-image {
   margin-left: -270px;
   margin-right: 30px;
 }
-/* line 198, asc.scss */
+/* line 203, asc.scss */
 html body main figure.featured-image img {
   position: fixed;
   height: 100%;
 }
-/* line 203, asc.scss */
+/* line 208, asc.scss */
 html body main .page {
   width: 50%;
   margin-right: 150px;
   margin-top: 65px;
   float: right;
 }
-/* line 207, asc.scss */
-html body main .post {
+/* line 212, asc.scss */
+html body main .post, html body main .wsuwp_uc_project, html body main .wsuwp_uc_publication, html body main .wsuwp_uc_person, html body main .wsuwp_uc_entity {
   margin-left: 70px;
 }
+/* line 216, asc.scss */
+html body main footer.main-footer {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-/* line 213, asc.scss */
+/* line 225, asc.scss */
 .blog main {
   margin-left: 200px;
   margin-top: 75px;
 }
 
 @media screen and (max-device-width: 791px) {
-  /* line 228, asc.scss */
+  /* line 240, asc.scss */
   html body #binder #spine header {
     background-color: #0094ca;
   }
-  /* line 231, asc.scss */
+  /* line 243, asc.scss */
   html body #binder #spine #wsu-signature {
     background-image: url(/wp-content/uploads/sites/192/2015/01/mobile-logo.png);
     background-repeat: no-repeat;
     background-size: 18% !important;
     background-position: center 12px !important;
   }
-  /* line 237, asc.scss */
+  /* line 249, asc.scss */
   html body #binder #spine #side-search-area {
     margin-top: 22px;
   }
-  /* line 240, asc.scss */
+  /* line 252, asc.scss */
   html body #binder #spine #side-latest-news {
     display: none;
   }
-  /* line 244, asc.scss */
+  /* line 256, asc.scss */
   html body #binder .shelved button#shelve, html body #binder .unshelved button#shelve {
     background: url(/wp-content/uploads/sites/192/2015/01/menu.png);
     background-repeat: no-repeat;
@@ -258,7 +268,7 @@ html body main .post {
     background-color: #4e4c4b;
     display: block;
   }
-  /* line 252, asc.scss */
+  /* line 264, asc.scss */
   html body figure.featured-image {
     position: relative !important;
     display: block;
@@ -267,19 +277,19 @@ html body main .post {
     float: none;
     margin-left: 0px !important;
   }
-  /* line 260, asc.scss */
+  /* line 272, asc.scss */
   html body .page {
     float: none;
     width: 100% !important;
     margin: 0 !important;
   }
-  /* line 265, asc.scss */
+  /* line 277, asc.scss */
   html body .post {
     margin-left: 0 !important;
   }
 }
 @media screen and (min-width: 2100px) {
-  /* line 272, asc.scss */
+  /* line 284, asc.scss */
   html body #binder.fluid.max-1980 {
     max-width: 3000px;
   }
