--- a/scss/asc.css
+++ b/scss/asc.css
@@ -1,4 +1,4 @@
-/* line 19, asc.scss */
+/* line 34, asc.scss */
 html body {
   height: 100%;
   font-family: "Roboto", sans-serif;
@@ -6,7 +6,7 @@ html body {
   color: #343232;
   background-color: white;
 }
-/* line 25, asc.scss */
+/* line 40, asc.scss */
 html body #spine.asc-heavy-gray #glue:before {
   background-color: #4e4c4b;
   color: white;
@@ -14,15 +14,15 @@ html body #spine.asc-heavy-gray #glue:before {
   width: 1000px;
   position: absolute;
 }
-/* line 33, asc.scss */
+/* line 48, asc.scss */
 html body #spine #glue, html body #spine #glue:before {
   width: 222px;
 }
-/* line 36, asc.scss */
+/* line 51, asc.scss */
 html body #spine #wsu-signature {
   background-image: url(/wp-content/uploads/sites/192/2015/01/ascent-logo.png);
 }
-/* line 40, asc.scss */
+/* line 55, asc.scss */
 html body #spine #side-search-area input#s {
   width: 196px;
   height: 37px;
@@ -39,25 +39,25 @@ html body #spine #side-search-area input#s {
   background-size: 12%;
   letter-spacing: 1px;
 }
-/* line 55, asc.scss */
+/* line 70, asc.scss */
 html body #spine #side-search-area input#s:hover, html body #spine #side-search-area input#s:focus {
   border: 1px solid #0094ca;
 }
-/* line 62, asc.scss */
+/* line 77, asc.scss */
 html body #spine:not(.cropped) .spine-navigation {
   padding-bottom: 0px;
 }
-/* line 66, asc.scss */
+/* line 81, asc.scss */
 html body #spine .spine-sitenav {
   margin-left: 0;
   margin-right: 0;
   padding-top: 8px;
 }
-/* line 70, asc.scss */
+/* line 85, asc.scss */
 html body #spine .spine-sitenav ul li {
   border-style: none;
 }
-/* line 73, asc.scss */
+/* line 88, asc.scss */
 html body #spine .spine-sitenav a {
   font-size: 1.2em;
   letter-spacing: 1px;
@@ -66,7 +66,7 @@ html body #spine .spine-sitenav a {
   color: white;
   border-left: #4e4c4b solid 8px;
 }
-/* line 80, asc.scss */
+/* line 95, asc.scss */
 html body #spine .spine-sitenav a:hover {
   border-left: #747270 solid 8px;
   color: white;
@@ -74,14 +74,14 @@ html body #spine .spine-sitenav a:hover {
   font-weight: 300;
   cursor: pointer;
 }
-/* line 88, asc.scss */
+/* line 103, asc.scss */
 html body #spine .spine-sitenav li.dogeared > a {
   color: white;
   background-color: #747270;
   border-left: #0094ca solid 8px;
   font-weight: 300;
 }
-/* line 96, asc.scss */
+/* line 111, asc.scss */
 html body #spine #side-latest-news h4 {
   color: white;
   text-transform: uppercase;
@@ -95,7 +95,7 @@ html body #spine #side-latest-news h4 {
   border-top: 1px solid #747270;
   padding-top: 30px;
 }
-/* line 109, asc.scss */
+/* line 124, asc.scss */
 html body #spine #side-latest-news .side-latest-news-box {
   display: block;
   height: 100%;
@@ -108,12 +108,12 @@ html body #spine #side-latest-news .side-latest-news-box {
   color: white;
   clear: both;
 }
-/* line 121, asc.scss */
+/* line 136, asc.scss */
 html body #spine #side-latest-news h5 {
   font-size: 1.2em;
   padding-bottom: 1em;
 }
-/* line 125, asc.scss */
+/* line 140, asc.scss */
 html body #spine #side-latest-news .rmore {
   display: block;
   width: 80px;
@@ -126,28 +126,28 @@ html body #spine #side-latest-news .rmore {
   text-align: center;
   background-color: #0094ca;
 }
-/* line 136, asc.scss */
+/* line 150, asc.scss */
 html body #spine #side-latest-news .rmore a {
   display: block;
   height: 100%;
   width: 100%;
   color: white;
 }
-/* line 142, asc.scss */
+/* line 153, asc.scss */
 html body #spine #side-latest-news .rmore:hover, html body #spine #side-latest-news .rmore:focus {
   padding: 4px;
   background-color: #4e4c4b;
   cursor: pointer;
   border: 1px solid #0094ca;
 }
-/* line 152, asc.scss */
+/* line 160, asc.scss */
 html body #spine .spine-footer {
   color: white;
   font-size: 1.3em;
   line-height: 1.1em;
   width: 178px;
 }
-/* line 158, asc.scss */
+/* line 166, asc.scss */
 html body #spine .spine-global-links {
   margin-top: 22px;
   padding-top: 22px;
@@ -155,16 +155,16 @@ html body #spine .spine-global-links {
   clear: both;
   border-color: #747270;
 }
-/* line 167, asc.scss */
+/* line 175, asc.scss */
 html body main a {
   color: #0094ca;
   text-decoration: underline;
 }
-/* line 170, asc.scss */
+/* line 178, asc.scss */
 html body main a:hover {
   color: #747270;
 }
-/* line 174, asc.scss */
+/* line 182, asc.scss */
 html body main h1 {
   color: #0094ca;
   font-weight: 700;
@@ -172,33 +172,33 @@ html body main h1 {
   line-height: 1.1em;
   padding-bottom: 1em;
 }
-/* line 178, asc.scss */
+/* line 186, asc.scss */
 html body main h2 {
   color: #0094ca;
   font-weight: 700;
   font-size: 2.2em;
   line-height: 1.1em;
 }
-/* line 181, asc.scss */
+/* line 189, asc.scss */
 html body main h3 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.8em;
   line-height: 1.1em;
 }
-/* line 184, asc.scss */
+/* line 192, asc.scss */
 html body main h4 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.2em;
   line-height: 1.1em;
 }
-/* line 187, asc.scss */
+/* line 195, asc.scss */
 html body main p, html body main ul, html body main ol {
   font-size: 1.4em;
   line-height: 1.6em;
 }
-/* line 192, asc.scss */
+/* line 200, asc.scss */
 html body main figure.featured-image {
   width: 50%;
   height: 100%;
@@ -211,56 +211,105 @@ html body main figure.featured-image {
   margin-left: -270px;
   margin-right: 30px;
 }
-/* line 203, asc.scss */
+/* line 211, asc.scss */
 html body main figure.featured-image img {
   position: fixed;
   height: 100%;
 }
-/* line 208, asc.scss */
+/* line 216, asc.scss */
 html body main .page {
   width: 50%;
   margin-right: 150px;
   margin-top: 65px;
   float: right;
 }
-/* line 212, asc.scss */
-html body main .post, html body main .wsuwp_uc_project, html body main .wsuwp_uc_publication, html body main .wsuwp_uc_person, html body main .wsuwp_uc_entity {
+/* line 220, asc.scss */
+html body main .post, html body main .wsuwp_uc_project, html body main .wsuwp_uc_publication, html body main .wsuwp_uc_person, html body main .wsuwp_uc_entity, html body main #tribe-events-pg-template {
   margin-left: 70px;
 }
-/* line 216, asc.scss */
+/* line 222, asc.scss */
+html body main .post #tribe-bar-form, html body main .wsuwp_uc_project #tribe-bar-form, html body main .wsuwp_uc_publication #tribe-bar-form, html body main .wsuwp_uc_person #tribe-bar-form, html body main .wsuwp_uc_entity #tribe-bar-form, html body main #tribe-events-pg-template #tribe-bar-form {
+  background: white;
+  color: #343232;
+}
+/* line 225, asc.scss */
+html body main .post #tribe-bar-form input[type=email], html body main .post #tribe-bar-form input[type=password], html body main .post #tribe-bar-form input[type=text], html body main .post #tribe-bar-form select, html body main .post #tribe-bar-form textarea, html body main .wsuwp_uc_project #tribe-bar-form input[type=email], html body main .wsuwp_uc_project #tribe-bar-form input[type=password], html body main .wsuwp_uc_project #tribe-bar-form input[type=text], html body main .wsuwp_uc_project #tribe-bar-form select, html body main .wsuwp_uc_project #tribe-bar-form textarea, html body main .wsuwp_uc_publication #tribe-bar-form input[type=email], html body main .wsuwp_uc_publication #tribe-bar-form input[type=password], html body main .wsuwp_uc_publication #tribe-bar-form input[type=text], html body main .wsuwp_uc_publication #tribe-bar-form select, html body main .wsuwp_uc_publication #tribe-bar-form textarea, html body main .wsuwp_uc_person #tribe-bar-form input[type=email], html body main .wsuwp_uc_person #tribe-bar-form input[type=password], html body main .wsuwp_uc_person #tribe-bar-form input[type=text], html body main .wsuwp_uc_person #tribe-bar-form select, html body main .wsuwp_uc_person #tribe-bar-form textarea, html body main .wsuwp_uc_entity #tribe-bar-form input[type=email], html body main .wsuwp_uc_entity #tribe-bar-form input[type=password], html body main .wsuwp_uc_entity #tribe-bar-form input[type=text], html body main .wsuwp_uc_entity #tribe-bar-form select, html body main .wsuwp_uc_entity #tribe-bar-form textarea, html body main #tribe-events-pg-template #tribe-bar-form input[type=email], html body main #tribe-events-pg-template #tribe-bar-form input[type=password], html body main #tribe-events-pg-template #tribe-bar-form input[type=text], html body main #tribe-events-pg-template #tribe-bar-form select, html body main #tribe-events-pg-template #tribe-bar-form textarea {
+  color: #343232;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.2em;
+}
+/* line 231, asc.scss */
+html body main .post #tribe-bar-form .tribe-bar-submit
+input[type=submit], html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
+input[type=submit], html body main .wsuwp_uc_publication #tribe-bar-form .tribe-bar-submit
+input[type=submit], html body main .wsuwp_uc_person #tribe-bar-form .tribe-bar-submit
+input[type=submit], html body main .wsuwp_uc_entity #tribe-bar-form .tribe-bar-submit
+input[type=submit], html body main #tribe-events-pg-template #tribe-bar-form .tribe-bar-submit
+input[type=submit] {
+  text-align: center;
+  background-color: #0094ca;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 1px;
+}
+/* line 235, asc.scss */
+html body main .post #tribe-bar-form .tribe-bar-submit
+input[type=submit]:hover, html body main .post #tribe-bar-form .tribe-bar-submit
+input[type=submit]:focus, html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
+input[type=submit]:hover, html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
+input[type=submit]:focus, html body main .wsuwp_uc_publication #tribe-bar-form .tribe-bar-submit
+input[type=submit]:hover, html body main .wsuwp_uc_publication #tribe-bar-form .tribe-bar-submit
+input[type=submit]:focus, html body main .wsuwp_uc_person #tribe-bar-form .tribe-bar-submit
+input[type=submit]:hover, html body main .wsuwp_uc_person #tribe-bar-form .tribe-bar-submit
+input[type=submit]:focus, html body main .wsuwp_uc_entity #tribe-bar-form .tribe-bar-submit
+input[type=submit]:hover, html body main .wsuwp_uc_entity #tribe-bar-form .tribe-bar-submit
+input[type=submit]:focus, html body main #tribe-events-pg-template #tribe-bar-form .tribe-bar-submit
+input[type=submit]:hover, html body main #tribe-events-pg-template #tribe-bar-form .tribe-bar-submit
+input[type=submit]:focus {
+  background-color: #4e4c4b;
+  cursor: pointer;
+  border: 1px solid #0094ca;
+  padding: 9px;
+}
+/* line 244, asc.scss */
 html body main footer.main-footer {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 225, asc.scss */
+/* line 253, asc.scss */
+.datepicker.dropdown-menu {
+  color: #343232;
+  font-family: "Roboto", sans-serif !important;
+}
+
+/* line 259, asc.scss */
 .blog main {
   margin-left: 200px;
   margin-top: 75px;
 }
 
 @media screen and (max-device-width: 791px) {
-  /* line 240, asc.scss */
+  /* line 274, asc.scss */
   html body #binder #spine header {
     background-color: #0094ca;
   }
-  /* line 243, asc.scss */
+  /* line 277, asc.scss */
   html body #binder #spine #wsu-signature {
     background-image: url(/wp-content/uploads/sites/192/2015/01/mobile-logo.png);
     background-repeat: no-repeat;
     background-size: 18% !important;
     background-position: center 12px !important;
   }
-  /* line 249, asc.scss */
+  /* line 283, asc.scss */
   html body #binder #spine #side-search-area {
     margin-top: 22px;
   }
-  /* line 252, asc.scss */
+  /* line 286, asc.scss */
   html body #binder #spine #side-latest-news {
     display: none;
   }
-  /* line 256, asc.scss */
+  /* line 290, asc.scss */
   html body #binder .shelved button#shelve, html body #binder .unshelved button#shelve {
     background: url(/wp-content/uploads/sites/192/2015/01/menu.png);
     background-repeat: no-repeat;
@@ -268,7 +317,7 @@ html body main footer.main-footer {
     background-color: #4e4c4b;
     display: block;
   }
-  /* line 264, asc.scss */
+  /* line 298, asc.scss */
   html body figure.featured-image {
     position: relative !important;
     display: block;
@@ -277,19 +326,19 @@ html body main footer.main-footer {
     float: none;
     margin-left: 0px !important;
   }
-  /* line 272, asc.scss */
+  /* line 306, asc.scss */
   html body .page {
     float: none;
     width: 100% !important;
     margin: 0 !important;
   }
-  /* line 277, asc.scss */
+  /* line 311, asc.scss */
   html body .post {
     margin-left: 0 !important;
   }
 }
 @media screen and (min-width: 2100px) {
-  /* line 284, asc.scss */
+  /* line 318, asc.scss */
   html body #binder.fluid.max-1980 {
     max-width: 3000px;
   }
