--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -308,7 +308,7 @@ $target-min-width: 2100px;
 				width:100% !important;
 				margin:0 !important;
 			}
-			.post {
+			.post,.wsuwp_uc_project, .wsuwp_uc_publication, .wsuwp_uc_person, .wsuwp_uc_entity, #tribe-events-pg-template{
 				margin-left:0 !important;
 			}
 		}
