--- a/scss/asc.css
+++ b/scss/asc.css
@@ -81,7 +81,21 @@ html body #spine .spine-sitenav li.dogeared > a {
   border-left: #0094ca solid 8px;
   font-weight: 300;
 }
-/* line 111, asc.scss */
+/* line 109, asc.scss */
+html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a {
+  background-image: none;
+  padding-left: 1em;
+}
+/* line 112, asc.scss */
+html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a:before, html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a:hover {
+  background-image: none;
+}
+/* line 117, asc.scss */
+html body #spine #side-latest-news {
+  /* Remove hidden if we decide to use */
+  display: none;
+}
+/* line 120, asc.scss */
 html body #spine #side-latest-news h4 {
   color: white;
   text-transform: uppercase;
@@ -95,9 +109,8 @@ html body #spine #side-latest-news h4 {
   border-top: 1px solid #747270;
   padding-top: 30px;
 }
-/* line 124, asc.scss */
+/* line 133, asc.scss */
 html body #spine #side-latest-news .side-latest-news-box {
-  display: block;
   height: 100%;
   width: 178px;
   background-color: #343232;
@@ -108,12 +121,12 @@ html body #spine #side-latest-news .side-latest-news-box {
   color: white;
   clear: both;
 }
-/* line 136, asc.scss */
+/* line 144, asc.scss */
 html body #spine #side-latest-news h5 {
   font-size: 1.2em;
   padding-bottom: 1em;
 }
-/* line 140, asc.scss */
+/* line 148, asc.scss */
 html body #spine #side-latest-news .rmore {
   display: block;
   width: 80px;
@@ -126,28 +139,28 @@ html body #spine #side-latest-news .rmore {
   text-align: center;
   background-color: #0094ca;
 }
-/* line 150, asc.scss */
+/* line 158, asc.scss */
 html body #spine #side-latest-news .rmore a {
   display: block;
   height: 100%;
   width: 100%;
   color: white;
 }
-/* line 153, asc.scss */
+/* line 161, asc.scss */
 html body #spine #side-latest-news .rmore:hover, html body #spine #side-latest-news .rmore:focus {
   padding: 4px;
   background-color: #4e4c4b;
   cursor: pointer;
   border: 1px solid #0094ca;
 }
-/* line 160, asc.scss */
+/* line 168, asc.scss */
 html body #spine .spine-footer {
   color: white;
   font-size: 1.3em;
   line-height: 1.1em;
   width: 178px;
 }
-/* line 166, asc.scss */
+/* line 174, asc.scss */
 html body #spine .spine-global-links {
   margin-top: 22px;
   padding-top: 22px;
@@ -155,16 +168,16 @@ html body #spine .spine-global-links {
   clear: both;
   border-color: #747270;
 }
-/* line 175, asc.scss */
+/* line 183, asc.scss */
 html body main a {
   color: #0094ca;
   text-decoration: underline;
 }
-/* line 178, asc.scss */
+/* line 186, asc.scss */
 html body main a:hover {
   color: #747270;
 }
-/* line 182, asc.scss */
+/* line 190, asc.scss */
 html body main h1 {
   color: #0094ca;
   font-weight: 700;
@@ -172,33 +185,33 @@ html body main h1 {
   line-height: 1.1em;
   padding-bottom: 1em;
 }
-/* line 186, asc.scss */
+/* line 194, asc.scss */
 html body main h2 {
   color: #0094ca;
   font-weight: 700;
   font-size: 2.2em;
   line-height: 1.1em;
 }
-/* line 189, asc.scss */
+/* line 197, asc.scss */
 html body main h3 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.8em;
   line-height: 1.1em;
 }
-/* line 192, asc.scss */
+/* line 200, asc.scss */
 html body main h4 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.2em;
   line-height: 1.1em;
 }
-/* line 195, asc.scss */
+/* line 203, asc.scss */
 html body main p, html body main ul, html body main ol {
   font-size: 1.4em;
   line-height: 1.6em;
 }
-/* line 200, asc.scss */
+/* line 208, asc.scss */
 html body main figure.featured-image {
   width: 50%;
   height: 100%;
@@ -211,34 +224,38 @@ html body main figure.featured-image {
   margin-left: -270px;
   margin-right: 30px;
 }
-/* line 211, asc.scss */
+/* line 219, asc.scss */
 html body main figure.featured-image img {
   position: fixed;
   height: 100%;
 }
-/* line 216, asc.scss */
+/* line 224, asc.scss */
 html body main .page {
   width: 50%;
   margin-right: 150px;
   margin-top: 65px;
   float: right;
 }
-/* line 220, asc.scss */
+/* line 228, asc.scss */
 html body main .post, html body main .wsuwp_uc_project, html body main .wsuwp_uc_publication, html body main .wsuwp_uc_person, html body main .wsuwp_uc_entity, html body main #tribe-events-pg-template {
   margin-left: 70px;
 }
-/* line 222, asc.scss */
+/* line 231, asc.scss */
+html body main .post .tribe-events-calendar td.tribe-events-present, html body main .wsuwp_uc_project .tribe-events-calendar td.tribe-events-present, html body main .wsuwp_uc_publication .tribe-events-calendar td.tribe-events-present, html body main .wsuwp_uc_person .tribe-events-calendar td.tribe-events-present, html body main .wsuwp_uc_entity .tribe-events-calendar td.tribe-events-present, html body main #tribe-events-pg-template .tribe-events-calendar td.tribe-events-present {
+  background-color: #0094ca;
+}
+/* line 235, asc.scss */
 html body main .post #tribe-bar-form, html body main .wsuwp_uc_project #tribe-bar-form, html body main .wsuwp_uc_publication #tribe-bar-form, html body main .wsuwp_uc_person #tribe-bar-form, html body main .wsuwp_uc_entity #tribe-bar-form, html body main #tribe-events-pg-template #tribe-bar-form {
   background: white;
   color: #343232;
 }
-/* line 225, asc.scss */
+/* line 238, asc.scss */
 html body main .post #tribe-bar-form input[type=email], html body main .post #tribe-bar-form input[type=password], html body main .post #tribe-bar-form input[type=text], html body main .post #tribe-bar-form select, html body main .post #tribe-bar-form textarea, html body main .wsuwp_uc_project #tribe-bar-form input[type=email], html body main .wsuwp_uc_project #tribe-bar-form input[type=password], html body main .wsuwp_uc_project #tribe-bar-form input[type=text], html body main .wsuwp_uc_project #tribe-bar-form select, html body main .wsuwp_uc_project #tribe-bar-form textarea, html body main .wsuwp_uc_publication #tribe-bar-form input[type=email], html body main .wsuwp_uc_publication #tribe-bar-form input[type=password], html body main .wsuwp_uc_publication #tribe-bar-form input[type=text], html body main .wsuwp_uc_publication #tribe-bar-form select, html body main .wsuwp_uc_publication #tribe-bar-form textarea, html body main .wsuwp_uc_person #tribe-bar-form input[type=email], html body main .wsuwp_uc_person #tribe-bar-form input[type=password], html body main .wsuwp_uc_person #tribe-bar-form input[type=text], html body main .wsuwp_uc_person #tribe-bar-form select, html body main .wsuwp_uc_person #tribe-bar-form textarea, html body main .wsuwp_uc_entity #tribe-bar-form input[type=email], html body main .wsuwp_uc_entity #tribe-bar-form input[type=password], html body main .wsuwp_uc_entity #tribe-bar-form input[type=text], html body main .wsuwp_uc_entity #tribe-bar-form select, html body main .wsuwp_uc_entity #tribe-bar-form textarea, html body main #tribe-events-pg-template #tribe-bar-form input[type=email], html body main #tribe-events-pg-template #tribe-bar-form input[type=password], html body main #tribe-events-pg-template #tribe-bar-form input[type=text], html body main #tribe-events-pg-template #tribe-bar-form select, html body main #tribe-events-pg-template #tribe-bar-form textarea {
   color: #343232;
   font-family: "Roboto", sans-serif;
   font-size: 1.2em;
 }
-/* line 231, asc.scss */
+/* line 244, asc.scss */
 html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit], html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
 input[type=submit], html body main .wsuwp_uc_publication #tribe-bar-form .tribe-bar-submit
@@ -251,7 +268,7 @@ input[type=submit] {
   font-family: "Roboto", sans-serif;
   letter-spacing: 1px;
 }
-/* line 235, asc.scss */
+/* line 248, asc.scss */
 html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit]:hover, html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit]:focus, html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
@@ -270,46 +287,46 @@ input[type=submit]:focus {
   border: 1px solid #0094ca;
   padding: 9px;
 }
-/* line 244, asc.scss */
+/* line 257, asc.scss */
 html body main footer.main-footer {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 253, asc.scss */
+/* line 266, asc.scss */
 .datepicker.dropdown-menu {
   color: #343232;
   font-family: "Roboto", sans-serif !important;
 }
 
-/* line 259, asc.scss */
+/* line 272, asc.scss */
 .blog main {
   margin-left: 200px;
   margin-top: 75px;
 }
 
 @media screen and (max-device-width: 791px) {
-  /* line 274, asc.scss */
+  /* line 287, asc.scss */
   html body #binder #spine header {
     background-color: #0094ca;
   }
-  /* line 277, asc.scss */
+  /* line 290, asc.scss */
   html body #binder #spine #wsu-signature {
     background-image: url(/wp-content/uploads/sites/192/2015/01/mobile-logo.png);
     background-repeat: no-repeat;
     background-size: 18% !important;
     background-position: center 12px !important;
   }
-  /* line 283, asc.scss */
+  /* line 296, asc.scss */
   html body #binder #spine #side-search-area {
     margin-top: 22px;
   }
-  /* line 286, asc.scss */
+  /* line 299, asc.scss */
   html body #binder #spine #side-latest-news {
     display: none;
   }
-  /* line 290, asc.scss */
+  /* line 303, asc.scss */
   html body #binder .shelved button#shelve, html body #binder .unshelved button#shelve {
     background: url(/wp-content/uploads/sites/192/2015/01/menu.png);
     background-repeat: no-repeat;
@@ -317,7 +334,7 @@ html body main footer.main-footer {
     background-color: #4e4c4b;
     display: block;
   }
-  /* line 298, asc.scss */
+  /* line 311, asc.scss */
   html body figure.featured-image {
     position: relative !important;
     display: block;
@@ -326,19 +343,19 @@ html body main footer.main-footer {
     float: none;
     margin-left: 0px !important;
   }
-  /* line 306, asc.scss */
+  /* line 319, asc.scss */
   html body .page {
     float: none;
     width: 100% !important;
     margin: 0 !important;
   }
-  /* line 311, asc.scss */
+  /* line 324, asc.scss */
   html body .post, html body .wsuwp_uc_project, html body .wsuwp_uc_publication, html body .wsuwp_uc_person, html body .wsuwp_uc_entity, html body #tribe-events-pg-template {
     margin-left: 0 !important;
   }
 }
 @media screen and (min-width: 2100px) {
-  /* line 318, asc.scss */
+  /* line 331, asc.scss */
   html body #binder.fluid.max-1980 {
     max-width: 3000px;
   }
