--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -106,8 +106,17 @@ html body {
 						border-left:$brand solid 8px;
 						font-weight:300;
 					}
+					&:not(.homeless)>ul>li:first-child>a {
+						background-image:none;
+						padding-left:1em;
+						&:before, &:hover {
+							background-image:none;
+						}
+					}
 				}
 			#side-latest-news {
+					/* Remove hidden if we decide to use */
+					display:none;
 					& h4 {
 						color:$heavy-color;
 						text-transform: uppercase;
@@ -122,7 +131,6 @@ html body {
 						padding-top:30px;
 											}
 					& .side-latest-news-box {
-						display: block;
 						height:100%;
 						width:178px;
 						background-color:$darkest-gray;
@@ -219,6 +227,11 @@ html body {
 		}
 		.post, .wsuwp_uc_project, .wsuwp_uc_publication, .wsuwp_uc_person, .wsuwp_uc_entity, #tribe-events-pg-template {
 				margin-left:70px;
+					.tribe-events-calendar {
+						td.tribe-events-present {
+							background-color:$brand;
+						}
+					}
 			 		#tribe-bar-form { 
 			 			background:$heavy-color;
 			 			color:$darkest-gray;
